# RespectMyAttestation

./: .gitignore  LICENSE
RespectMyAttestation/: Atman.swift  ContentView.swift  Data+RMA.swift  RespectMyAttestationApp.swift
RespectMyAttestation.xcodeproj/: project.pbxproj
RespectMyAttestation.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
RespectMyAttestation.xcworkspace/: contents.xcworkspacedata
RespectMyAttestation.xcworkspace/xcshareddata/swiftpm/: Package.resolved
RespectMyAttestationTests/: RespectMyAttestationTests.swift
RespectMyAttestationUITests/: RespectMyAttestationUITests.swift
att-server/: .gitignore  Cargo.toml  Dockerfile  Package.resolved  Package.swift  docker-compose.yml
att-server/Sources/App/: Data+RMA.swift  configure.swift  routes.swift
att-server/Sources/App/Migrations/: CreateChallenge.swift
att-server/Sources/App/Models/: Challenge.swift
att-server/src/: main.rs
rust-wip/apple-appattest/: Cargo.toml
rust-wip/apple-appattest/src/: lib.rs
rust-wip/apple-appattest/tests/resources/: attestation.cbor
rust-wip/att-server/: Cargo.toml
rust-wip/att-server/src/: main.rs
