[package]
name = "att-server"
version = "0.1.0"
authors = ["David Wagner <mnem@noiseandheat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rand = "0.7.3"
serde = {version = "1.0.115", features = ["derive"]}
base64 = "0.12.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "uuid"]
