[package]
name = "apple-appattest"
version = "0.1.0"
authors = ["David Wagner <mnem@noiseandheat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.115", features = ["derive"]}
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
